// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WorkerDetail failure 1`] = `
<div>
  <div
    className="alert alert-danger"
    role="alert"
  >
    some error message
  </div>
  Loading...
</div>
`;

exports[`WorkerDetail loading 1`] = `
<div>
  Loading...
</div>
`;

exports[`WorkerDetail success 1`] = `
<div
  className="panel-group"
>
  <div
    className="panel panel-default"
    id={undefined}
  >
    <div
      className="panel-heading"
    >
      Details
    </div>
    <div
      className="panel-body"
    >
      <dl
        className="dl-horizontal"
      >
        <dt>
          Name
        </dt>
        <dd>
          alec-graybeard.local 36470
        </dd>
        <dt>
          Status
        </dt>
        <dd>
          exited
        </dd>
        <dt>
          Start Timestamp
        </dt>
        <dd>
          January 29th 2017, 8:13:47 pm
        </dd>
        <dt>
          Last Heartbeat
        </dt>
        <dd>
          January 29th 2017, 8:15:10 pm
        </dd>
      </dl>
    </div>
  </div>
  <div
    className="panel panel-default"
    id={undefined}
  >
    <div
      className="panel-heading"
    >
      Executions
    </div>
    <div
      className="panel-body"
    >
      <table
        className="table table-striped table-bordered table-condensed table-hover"
      >
        <thead>
          <tr>
            <th>
              Worker
            </th>
            <th>
              Workflow
            </th>
            <th>
              Task
            </th>
            <th>
              Status
            </th>
            <th>
              Start Time
            </th>
            <th>
              Runtime
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              <a
                onClick={[Function]}
                style={Object {}}
              >
                alec-graybeard.local 36561
              </a>
            </td>
            <td>
              Simple Workflow Example
            </td>
            <td>
              <a
                onClick={[Function]}
                style={Object {}}
              >
                done
              </a>
            </td>
            <td>
              succeeded
            </td>
            <td>
              January 29th 2017, 8:17:03 pm
            </td>
            <td />
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
